# molva

./: .gitignore  CONTRACT.md  PLAN.md  PLAN_UPDATE.md  PLAN_old.md  PROJECT.md  README.md  install.sh  pyproject.toml  uninstall.sh
packaging/: com.algusen.molva.plist
packaging/Molva transcriber.workflow/Contents/: Info.plist  document.wflow
packaging/Molva.workflow/Contents/: Info.plist  document.wflow  version.plist
scripts/: launchd.sh  quickaction.sh  run_daemon.sh
src/molva/: api.py  audio.py  cli.py  client.py  config.py  daemon.py  output.py  service.py  vad.py
src/molva/transcriber/: base.py  gigaam.py  stub.py
tests/: conftest.py  test_api.py  test_audio.py  test_cli.py  test_daemon_client.py  test_output.py  test_transcriber_gigaam.py  test_transcriber_stub.py  test_vad.py
