[project]
name = "molva"
version = "0.1.0"
description = "Локальный демон транскрибации аудио/видео на базе GigaAM-v3"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "pydantic>=2.6",
    "silero-vad>=5.1,<6.0",
    "numpy>=1.26",
    "click>=8.1",
]

[project.optional-dependencies]
gigaam = [
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "transformers==4.57.1",
    "hydra-core",
    "omegaconf",
    "sentencepiece",
    "pyannote.audio==4.0.0",   # нужен modeling_gigaam.py при импорте (get_pipeline)
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[project.scripts]
molva = "molva.cli:main"
molva-daemon = "molva.api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/molva"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
